[gd_scene load_steps=29 format=2]

[ext_resource path="res://CamDev/Sprites/TeaCart/final_table_extended.png" type="Texture" id=1]
[ext_resource path="res://CamDev/Scripts/TeaCart/Pipe.gd" type="Script" id=2]
[ext_resource path="res://CamDev/Sprites/TeaCart/pipe.png" type="Texture" id=3]
[ext_resource path="res://CamDev/Sprites/TeaCart/shelf_ver3.png" type="Texture" id=4]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim3.png" type="Texture" id=5]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim5.png" type="Texture" id=6]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim4.png" type="Texture" id=7]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim9.png" type="Texture" id=8]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim1.png" type="Texture" id=9]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim2.png" type="Texture" id=10]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim7.png" type="Texture" id=11]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim6.png" type="Texture" id=12]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim8.png" type="Texture" id=13]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim16.png" type="Texture" id=14]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim11.png" type="Texture" id=15]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim18.png" type="Texture" id=16]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim20.png" type="Texture" id=17]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim13.png" type="Texture" id=18]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim21.png" type="Texture" id=19]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim10.png" type="Texture" id=20]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim12.png" type="Texture" id=21]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim14.png" type="Texture" id=22]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim17.png" type="Texture" id=23]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim22.png" type="Texture" id=24]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim19.png" type="Texture" id=25]
[ext_resource path="res://CamDev/Animations/FaucetPouring/water_pouring_anim15.png" type="Texture" id=26]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 14 ), ExtResource( 23 ), ExtResource( 16 ), ExtResource( 25 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 24 ), ExtResource( 9 ) ],
"loop": false,
"name": "FaucetPouring",
"speed": 12.0
} ]

[node name="Table" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Shelf" type="Node2D" parent="Sprite"]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Sprite/Shelf"]
position = Vector2( -230, -49 )
texture = ExtResource( 4 )

[node name="Pipe" type="Area2D" parent="Sprite"]
position = Vector2( -79.3241, -117 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Sprite/Pipe"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Pipe"]
position = Vector2( 12.6759, -14.3333 )
shape = SubResource( 1 )

[node name="FaucetPouring" type="AnimatedSprite" parent="Sprite/Pipe"]
position = Vector2( 17.5, 70 )
z_index = 2
frames = SubResource( 2 )
animation = "FaucetPouring"

[connection signal="input_event" from="Sprite/Pipe" to="Sprite/Pipe" method="_on_Pipe_input_event"]
[connection signal="mouse_entered" from="Sprite/Pipe" to="Sprite/Pipe" method="_on_Pipe_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Pipe" to="Sprite/Pipe" method="_on_Pipe_mouse_exited"]
[connection signal="animation_finished" from="Sprite/Pipe/FaucetPouring" to="Sprite/Pipe" method="_on_FaucetPouring_animation_finished"]
